# CLAB-datalogger-receiver

./: .gitignore  .pylintrc  CONTRIBUTING.md  README.md  clab_datalogger_receiver_app.py  clab_datalogger_receiver_app.spec  install_package.bat  pyproject.toml  qt_app.py  requirements.txt  run_receiver.bat  setup.cfg  setup.py  struct_cfg.yaml  tbot_serial.py  tbot_serial_sender.py  test_udp.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-action-dev copy.yml  build-action-dev.yml  build-release-action-dev.yml
docs/: development.md  index.md
robolab/: __init__.py  animator.py  received_structure.py  serial_comm.py
robolab/serial_communication/: _packetizers.py  _utils.py  communication.py  packets.py
scripts/: build.bat  install_package.bat  install_package_development.bat  run_receiver.bat  run_receiver.sh
src/clab_datalogger_receiver/: __init__.py  __main__.py  animator.py  main_functions.py  qt_app_functions.py  qt_app_main.py  received_structure.py  saver.py  simple_console_main_classes.py  struct_editor.py  widgets.py  workers.py
src/clab_datalogger_receiver/base/: common.py
src/clab_datalogger_receiver/gui/: base_widgets.py  colors.py
src/clab_datalogger_receiver/serial_communication/: _packetizers.py  _utils.py  communication.py  packets.py
src/clab_datalogger_receiver/templates/: struct_cfg_template.yaml
src/clab_datalogger_receiver/udp_communication/: types.py
templates/: struct_cfg_template.yaml
tests/: test_received_struct.py  test_struct_cfg_multiple.yaml  test_struct_cfg_single.yaml
